syntax = "proto3";

package user;

message ErrorResponse {
  string message = 1;
  string details = 2;
}

message MetaResponse {
  Pagination pagination = 1;

  message Pagination {
    int32 total = 1;
    int32 page = 2;
    int32 limit = 3;
  }
}
service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse {
  bool success = 1;
  int32 code = 2;
  UserData data = 3;
  ErrorResponse error = 4;
  MetaResponse meta = 5;

  message UserData {
    string userId = 1;
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  int32 code = 2;
  LoginData data = 3;
  ErrorResponse error = 4;
  MetaResponse meta = 5;

  message LoginData {
    string token = 1;
  }
}